# GitHub

german-agent/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
german-agent/app/: main.py
german-agent/app/agents/: lesson_ingest.py  vocab_driller.py
german-agent/app/database/: db.py  models.py
german-agent/app/prompts/: ingest.txt  vocab_explain.txt
german-agent/app/services/: claude_client.py  dictionary.py  pdf_processor.py  signals.py
german-agent/specs/: phase1.md  phase2.md  phase3.md  phase4-exam.md  phase4.md  phase5.md  phase6.md
ms-learn/: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
ms-learn/.claude/: settings.local.json
ms-learn/mslearn/: catalog.py  cli.py  models.py  scraper.py
ms-learn/mslearn/exporters/: audio_exporter.py  docx_exporter.py
